clusters/talos-pve/apps/authentik/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-app-restrict
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/instance: authentik

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: authentik-db
            role: primary
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    - toFQDNs:
        - matchName: mail.exmaple.com
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-db-ingress-restrict
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
            app.kubernetes.io/instance: authentik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: authentik-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP

    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-db-metrics
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
